[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[project]
name = "toncenter"
description = "Python SDK for TON Center — REST API and Streaming for TON blockchain."
requires-python = ">=3.10,<3.15"
authors = [
    { name = "nessshon" },
]
maintainers = [
    { name = "nessshon" },
]
dependencies = [
    "aiohttp>=3.9.0",
    "pydantic>=2.4.1,<3.0",
]
keywords = [
    "AsyncIO",
    "REST API",
    "SDK",
    "TON",
    "TON Center",
    "TON blockchain",
    "The Open Network",
    "blockchain",
    "crypto",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dynamic = ["version"]
readme = "README.md"
license = "MIT"

[project.scripts]
toncenter = "toncenter.cli:main"

[project.urls]
Homepage = "https://github.com/nessshon/toncenter/"
Documentation = "https://toncenter.ness.su/"

[tool.setuptools.packages.find]
include = ["toncenter", "toncenter.*"]

[tool.setuptools.package-data]
toncenter = ["py.typed"]

[tool.setuptools.dynamic]
version = { attr = "toncenter.__meta__.__version__" }

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    # pydocstyle
    "D",
    # pycodestyle
    "E",
    "W",
    # pyflakes
    "F",
    # isort
    "I",
    # flake8-bugbear
    "B",
    # flake8-comprehensions
    "C4",
    # pyupgrade
    "UP",
    # flake8-simplify
    "SIM",
    # type-checking imports
    "TCH",
    # perflint
    "PERF",
    # flake8-debugger
    "T10",
    # flake8-print
    "T20",
    # flake8-pie
    "PIE",
    # pylint errors
    "PLE",
    # flake8-return
    "RET",
    # ruff-specific
    "RUF",
]
ignore = [
    # docstring in public module
    "D100",
    # docstring in public package
    "D104",
    # docstring in magic method
    "D105",
    # docstring in __init__
    "D107",
    # blank line before class docstring (conflicts D211)
    "D203",
    # 1 blank line required between summary and description (multi-line summary)
    "D205",
    # multi-line summary second line (conflicts D212)
    "D213",
    # first word capitalization (false positive for proper nouns like dApp)
    "D403",
    # type-checking import (false positive for Pydantic models)
    "TC001",
    "TC002",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"toncenter/rest/*/models.py" = ["D101"]
"tests/*" = ["D101", "D102", "D103", "T20"]
"examples/*" = ["D103", "T20"]

[tool.ruff.lint.isort]
known-first-party = ["toncenter"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
plugins = ["pydantic.mypy"]
python_version = "3.10"
strict = true
pretty = true
show_error_codes = true
show_error_context = true
namespace_packages = true
follow_imports_for_stubs = true
warn_unreachable = true
enable_error_code = [
    "ignore-without-code",
    "redundant-cast",
    "truthy-bool",
]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
